Fix small column in features on smaller screens

--- a/src/components/Features/Feature.scss
+++ b/src/components/Features/Feature.scss
@@ -1,51 +1,56 @@
 .feature {
-  &-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 1rem;
+	&-container {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		column-gap: 1rem;
 
-    @media screen and (max-width: 750px) {
-      column-gap: 0;
-    }
+		@media screen and (max-width: 750px) {
+			column-gap: 0;
+		}
 
-    @media screen and (max-width: 650px) {
-      grid-template-columns: repeat(1, 0.6fr);
-      justify-content: center;
-    }
-  }
+		@media screen and (max-width: 650px) {
+			grid-template-columns: repeat(1, 0.6fr);
+			justify-content: center;
+		}
 
-  &-item {
-    display: grid;
-    grid-template-columns: min-content 1fr;
-    column-gap: 1rem;
-    align-items: start;
+		@media screen and (max-width: 530px) {
+			grid-template-columns: repeat(1, 1fr);
+			justify-content: center;
+		}
+	}
 
-    padding: 1.4rem 1.6rem;
+	&-item {
+		display: grid;
+		grid-template-columns: min-content 1fr;
+		column-gap: 1rem;
+		align-items: start;
 
-    &__heading {
-      font-size: 1.3rem;
-      @media screen and (max-width: 650px) {
-        font-size: 1.4rem;
-      }
-      margin-bottom: 0.5rem;
-    }
+		padding: 1.4rem 1.6rem;
 
-    &__text {
-      font-size: 0.9rem;
-      @media screen and (max-width: 920px) {
-        font-size: 1.05rem;
-      }
-      @media screen and (max-width: 650px) {
-        font-size: 1.3rem;
-      }
-      font-weight: var(--font-weight-light);
-    }
+		&__heading {
+			font-size: 1.3rem;
+			@media screen and (max-width: 650px) {
+				font-size: 1.4rem;
+			}
+			margin-bottom: 0.5rem;
+		}
 
-    &__icon {
-      $size: 3rem;
+		&__text {
+			font-size: 0.9rem;
+			@media screen and (max-width: 920px) {
+				font-size: 1.05rem;
+			}
+			@media screen and (max-width: 650px) {
+				font-size: 1.3rem;
+			}
+			font-weight: var(--font-weight-light);
+		}
 
-      height: $size;
-      width: $size;
-    }
-  }
+		&__icon {
+			$size: 3rem;
+
+			height: $size;
+			width: $size;
+		}
+	}
 }
